# Pac_man_perso

./: .env.example  Makefile  TODO.md  config.json  highscore.json  pac-man.spec  pygame_aide.md  pyproject.toml
src/pacman/: main.py  maze_surface.py  pac_test.py  player.py
src/pacman/tests/: t_parse_config.py
src/pacman/ui/screens/: base_screen.py  main_menu.py
src/pacman/utils/: __init__.py  enums.py  pacman_errors.py  parse_config.py
